syntax = "proto3";
package rpc;
import "google/api/annotations.proto";
import "github.com/shuoyang2016/mywish/rpc/money.proto";

message Bidder {
    int64 id = 1;
    string name = 2;
    string shipping_address = 3;
    string alias = 4;
    Price total_amount = 5;
    Price total_amount_pending = 6;
    repeated Bid pending_bids = 7;
    repeated int64 in_shipping_product_ids = 8;
    repeated int64 closed_product_ids = 9;
    repeated int64 product_ids_in_request = 10;
}